Clean up repo - remove coursework-specific files for professional structure

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+
+# Keep locally - don't push to repo
+_KEEP_LOCAL_DELETE_BEFORE_PUSH/
